# krx-cli

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Makefile  README.md
.context/: STEERING.md  TASKS.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release-build.yml
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  cli.rs  main.rs  mcp.rs  output.rs
crates/cli/tests/: cli_error_output.rs  mcp_stdio.rs
crates/core/: Cargo.toml
crates/core/examples/: catalog_drift.rs
crates/core/src/: client.rs  config.rs  drift.rs  error.rs  lib.rs  runtime.rs
crates/core/tests/: catalog_drift.rs  library_surface.rs
docs/: development-checks.md  reference.md  references.md
docs/superpowers/plans/: 2026-06-26-mdc-investor-net-buy.md
docs/superpowers/specs/: 2026-06-26-mdc-investor-net-buy-design.md
scripts/: check-catalog-drift.sh  install-release.sh
src/: catalog.rs  cli.rs  client.rs  error.rs  lib.rs  main.rs  output.rs
