[package]
name = "krx-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "krw"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "env"] }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
